--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" type="icon/png" href="img/logo.png">
-	<title>bra brawl stars brawl stars</title>
+	<title>bra brawl stars brawl starssdss</title>
 	<script type="text/javascript" src="jquery-3.5.1.min.js"></script>
 </head>
 <body>
